--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     width: 100%;
     display: flex;
-    height: 30vh;
+    height: 200px;
     background-color: black;
     border-bottom: 1px solid  #d3d3d3;
 }
