--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -60,13 +60,11 @@
     color: black !important;
 }
 
-.movies-list {
+.movies__list {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
-    width: 100%;
-    margin-top: 48px;
-   
+    margin-top: 20px;
+    padding: 50px;
 }
 
 .movie {
