--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,102 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* TABLETS  */
+
+@media (max-width: 920px) {
+  .search__box {
+    position: fixed !important;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 550px;
+    width: 100%;
+    padding: 15px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 40px;
+  }
+}
+
+/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */ 
+
+@media (max-width: 769px) {
+  .search__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-bottom: 24px;
+    width: 100%;
+}
+
+.search__header > input {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  position: relative;
+}
+
+.search__input > input {
+    flex: 1 !important;
+    position: fixed !important;
+  }
+
+  .search__input--btn > .MuiSvgIcon-root {
+    position: absolute !important;
+    font-size: 18px;
+    color: black !important;
+    display: flex !important;
+    justify-content: space-between !important;
+}
+
+  .search__input--btn {
+    display: flex !important;
+    position: relative !important;
+    
+  }
+
+  
+
+  .movie__selected--figure {
+    height: 510px;
+  }
+
+  .movie__selected--description {
+    height: 510px;
+  }
+
+  /* SMALL PHONEs */ 
+
+  @media (max-width: 480px) {
+    .search__header {
+      display: flex !important;
+      align-items: center !important;
+      justify-content: space-around !important;
+      margin-bottom: 24px !important;
+      width: 100% !important;
+      position: relative !important;
+  }
+    
+    
+    .movies--list {
+    height: 100px;
+    padding: 16px;
+    margin: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .movie {
+      width: 100% !important;
+      max-width: 230px !important;
+    }
+    .movie__img--wrapper {
+      max-height: 300px;
+    }
+  }
+  
 }
