--- a/src/pages/SearchPage.css
+++ b/src/pages/SearchPage.css
@@ -52,6 +52,7 @@
     position: relative;
     cursor: pointer;
     right: 220px;
+   
 }
 
 .search__btn > .MuiSvgIcon-root {
@@ -72,6 +73,9 @@
     position: relative;
     padding: 16px;
     margin: 10px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     
 }
 
